# judge-haskell

./: .gitignore  HJudge.hs  HUnitJudge.hs  JSONLinter.hs  QuickCheckJudge.hs  README.md  config.json  dodona  hjudge.cabal  run  run.sh
lib/: HUnitJudge.hs  QuickCheckJudge.hs  Utils.hs
src/: JSONLinter.hs  Test.hs
testing/: clean.sh  test.sh
