name:                hjudge
version:             0.1.0.0
author:              Felix Van der Jeugt
maintainer:          felix.vanderjeugt@ugent.be
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HUnitJudge, QuickCheckJudge
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck >= 2.10 && < 3
                     , HUnit >= 1.5 && < 2
                     , MissingH >= 1.4 && < 2
                     , aeson >= 1.4 && < 1.5
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

executable jsonlinter
  hs-source-dirs:      src
  main-is:             JSONLinter.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlint >= 2.1 && < 2.2
                     , aeson >= 1.4 && < 1.5
                     , haskell-src-exts >= 1.20 && < 1.22
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

